--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
                 </div>
             </div>
         </section>
-        <section class="immerse-section" id="game">
+
+
+        <!--<section class="immerse-section" id="game">
             <div class="container">
                 <div class="immerse">
                     <div class="immerse__wrap">
@@ -192,7 +194,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
+
+
         <section class="story-section" id="about">
             <div class="container">
                 <div class="map-wrap" style=" background-image: url('images/story-bg.jpg');">
@@ -220,7 +224,9 @@
                 </div>
             </div>
         </section>
-        <section class="item-section" id="equipment">
+
+
+        <!--<section class="item-section" id="equipment">
             <div class="container">
                 <div class="item-wrap">
                     <div class="item">
@@ -276,7 +282,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
+
+
+
         <section class="instruction-section" id="instructions">
             <h2 class="section-title">Collection</h2>
             <p class="instruction-text base-text" style="color: #000">
@@ -322,7 +331,7 @@
 
                     </div>
                     <div class="map-block map-block_fits">
-                        <div class="map" style="margin-top: 105px">
+                        <div class="map">
                             <div class="map__item" data-aos="fade-up" data-aos-duration="1100" data-aos-once="true">
                                 <span class="map__percent">Phase 3</span>
                                 <p class="map-desc">
@@ -344,7 +353,9 @@
                 </div>
             </div>
         </section>
-        <section class="faq-section" id="faq">
+
+
+        <!--<section class="faq-section" id="faq">
             <div class="container">
                 <h2 class="section-title">FAQ</h2>
                 <div class="accordion">
@@ -410,7 +421,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
+
+
+
         <section class="bottom-section">
             <div class="container"><img src="images/bottom-bg.png" alt="">
                 <div class="bot-content">
